--- a/index.html
+++ b/index.html
@@ -5,22 +5,96 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI 채팅</title>
   <style>
-    body { font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; background: #fafafa; }
-    #chat { flex: 1; overflow-y: auto; padding: 10px; }
-    #input { display: flex; padding: 10px; background: #fff; border-top: 1px solid #ddd; }
-    input { flex: 1; padding: 8px; border: 1px solid #ccc; border-radius: 5px; }
-    button { margin-left: 10px; padding: 8px 12px; border: none; background: #007bff; color: #fff; border-radius: 5px; cursor: pointer; }
-    .user { text-align: right; color: #007bff; margin: 5px 0; }
-    .bot { text-align: left; color: #333; margin: 5px 0; }
+    body {
+      font-family: 'Pretendard', sans-serif;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      margin: 0;
+      background: #f2f3f7;
+    }
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 15px;
+    }
+    .message {
+      margin: 8px 0;
+      padding: 10px 15px;
+      border-radius: 12px;
+      max-width: 75%;
+      word-wrap: break-word;
+    }
+    .user {
+      background: #007bff;
+      color: white;
+      align-self: flex-end;
+      border-bottom-right-radius: 0;
+    }
+    .bot {
+      background: #fff;
+      color: #333;
+      align-self: flex-start;
+      border-bottom-left-radius: 0;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    }
+    #input-box {
+      display: flex;
+      padding: 10px;
+      background: #fff;
+      border-top: 1px solid #ddd;
+    }
+    #message {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 20px;
+      outline: none;
+    }
+    button {
+      margin-left: 8px;
+      padding: 10px 16px;
+      background: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 20px;
+    }
   </style>
 </head>
 <body>
   <div id="chat"></div>
-  <div id="input">
-    <input id="message" placeholder="메시지 입력..." />
-    <button onclick="sendMessage()">전송</button>
+  <div id="input-box">
+    <input id="message" type="text" placeholder="메시지를 입력하세요..." />
+    <button onclick="sendMessage()">보내기</button>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const chat = document.getElementById('chat');
+    const input = document.getElementById('message');
+
+    function addMessage(text, className) {
+      const div = document.createElement('div');
+      div.className = `message ${className}`;
+      div.textContent = text;
+      chat.appendChild(div);
+      chat.scrollTop = chat.scrollHeight;
+    }
+
+    async function sendMessage() {
+      const text = input.value.trim();
+      if (!text) return;
+      addMessage(text, 'user');
+      input.value = '';
+
+      const res = await fetch('/chat', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({ message: text })
+      });
+
+      const data = await res.json();
+      addMessage(data.reply, 'bot');
+    }
+  </script>
 </body>
 </html>
