--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,19 @@
-public/index.html
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI 채팅</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="chat">
+    <div id="messages"></div>
+    <div id="inputArea">
+      <input type="text" id="message" placeholder="메시지를 입력하세요..." autocomplete="off">
+      <button id="sendBtn">전송</button>
+    </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
