--- a/public/index.html
+++ b/public/index.html
@@ -9,45 +9,48 @@
 <body>
   <div id="chat"></div>
   <div id="inputArea">
-    <input id="message" placeholder="메시지를 입력하세요" />
+    <input type="text" id="message" placeholder="메시지를 입력하세요..." />
     <button id="sendBtn">전송</button>
   </div>
 
   <script>
     const chat = document.getElementById("chat");
-    const input = document.getElementById("message");
     const sendBtn = document.getElementById("sendBtn");
+    const messageInput = document.getElementById("message");
+
+    sendBtn.addEventListener("click", sendMessage);
+    messageInput.addEventListener("keypress", e => {
+      if (e.key === "Enter") sendMessage();
+    });
 
     async function sendMessage() {
-      const userMsg = input.value.trim();
-      if (!userMsg) return;
+      const text = messageInput.value.trim();
+      if (!text) return;
 
-      chat.innerHTML += `<div class="user">🧑‍💬 ${userMsg}</div>`;
-      input.value = "";
-      chat.scrollTop = chat.scrollHeight;
+      appendMessage("user", text);
+      messageInput.value = "";
 
       try {
         const res = await fetch("/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message: userMsg }),
+          body: JSON.stringify({ message: text }),
         });
 
-        if (!res.ok) throw new Error("서버 오류");
-
         const data = await res.json();
-        chat.innerHTML += `<div class="bot">🤖 ${data.reply}</div>`;
-      } catch (err) {
-        chat.innerHTML += `<div class="bot error">⚠️ 서버와 연결 실패</div>`;
+        appendMessage("bot", data.reply || data.error || "응답 없음");
+      } catch {
+        appendMessage("bot", "서버 오류");
       }
-
-      chat.scrollTop = chat.scrollHeight;
     }
 
-    sendBtn.addEventListener("click", sendMessage);
-    input.addEventListener("keypress", e => {
-      if (e.key === "Enter") sendMessage();
-    });
+    function appendMessage(sender, text) {
+      const msg = document.createElement("div");
+      msg.className = sender;
+      msg.textContent = text;
+      chat.appendChild(msg);
+      chat.scrollTop = chat.scrollHeight;
+    }
   </script>
 </body>
 </html>
