--- a/public/index.html
+++ b/public/index.html
@@ -2,92 +2,104 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI Chat</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>AI 채팅</title>
   <style>
     body {
-      font-family: "Noto Sans KR", sans-serif;
-      margin: 0;
+      font-family: 'Noto Sans KR', sans-serif;
       display: flex;
       flex-direction: column;
       height: 100vh;
-      background: #f5f6fa;
+      margin: 0;
+      background: #f5f7fa;
     }
+
     #chat {
       flex: 1;
       overflow-y: auto;
       padding: 15px;
-      background: white;
+      background: #fff;
       border-bottom: 1px solid #ddd;
     }
+
     .user, .bot {
-      margin: 10px 0;
-      max-width: 80%;
-      padding: 10px 15px;
+      max-width: 70%;
+      padding: 10px 14px;
       border-radius: 12px;
-      line-height: 1.4;
-      word-break: break-word;
+      margin: 8px 0;
+      word-wrap: break-word;
     }
+
     .user {
+      align-self: flex-end;
       background: #007bff;
       color: white;
-      align-self: flex-end;
-      margin-left: auto;
     }
+
     .bot {
-      background: #eee;
-      color: #333;
       align-self: flex-start;
-      margin-right: auto;
+      background: #eaeaea;
+      color: #333;
     }
+
     #inputArea {
       display: flex;
       padding: 10px;
       background: #fff;
-      border-top: 1px solid #ddd;
     }
+
     #message {
       flex: 1;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 8px;
+      outline: none;
     }
+
     #sendBtn {
       margin-left: 10px;
-      padding: 10px 14px;
+      padding: 10px 15px;
       border: none;
       background: #007bff;
       color: white;
       border-radius: 8px;
       cursor: pointer;
     }
+
+    @media (max-width: 600px) {
+      .user, .bot {
+        max-width: 85%;
+        font-size: 15px;
+      }
+    }
   </style>
 </head>
 <body>
   <div id="chat"></div>
   <div id="inputArea">
-    <input id="message" type="text" placeholder="메시지를 입력하세요..." />
+    <input id="message" type="text" placeholder="메시지를 입력하세요" />
     <button id="sendBtn">전송</button>
   </div>
 
   <script>
     const chat = document.getElementById("chat");
-    const messageInput = document.getElementById("message");
+    const input = document.getElementById("message");
     const sendBtn = document.getElementById("sendBtn");
 
-    function addMessage(content, sender) {
-      const div = document.createElement("div");
-      div.textContent = content;
-      div.className = sender;
-      chat.appendChild(div);
+    function addMessage(text, sender) {
+      const msg = document.createElement("div");
+      msg.classList.add(sender);
+      msg.textContent = text;
+      chat.appendChild(msg);
       chat.scrollTop = chat.scrollHeight;
     }
 
     async function sendMessage() {
-      const message = messageInput.value.trim();
+      const message = input.value.trim();
       if (!message) return;
+
       addMessage(message, "user");
-      messageInput.value = "";
+      input.value = "";
 
       try {
         const res = await fetch("/chat", {
@@ -95,15 +107,16 @@
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ message }),
         });
+
         const data = await res.json();
         addMessage(data.reply || "응답 오류", "bot");
       } catch (err) {
-        addMessage("⚠️ 서버 오류", "bot");
+        addMessage("서버 오류 발생", "bot");
       }
     }
 
-    sendBtn.onclick = sendMessage;
-    messageInput.addEventListener("keypress", (e) => {
+    sendBtn.addEventListener("click", sendMessage);
+    input.addEventListener("keypress", (e) => {
       if (e.key === "Enter") sendMessage();
     });
   </script>
