--- a/public/index.html
+++ b/public/index.html
@@ -1,124 +1,59 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>AI 채팅</title>
-  <style>
-    body {
-      font-family: 'Noto Sans KR', sans-serif;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      margin: 0;
-      background: #f5f7fa;
-    }
-
-    #chat {
-      flex: 1;
-      overflow-y: auto;
-      padding: 15px;
-      background: #fff;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .user, .bot {
-      max-width: 70%;
-      padding: 10px 14px;
-      border-radius: 12px;
-      margin: 8px 0;
-      word-wrap: break-word;
-    }
-
-    .user {
-      align-self: flex-end;
-      background: #007bff;
-      color: white;
-    }
-
-    .bot {
-      align-self: flex-start;
-      background: #eaeaea;
-      color: #333;
-    }
-
-    #inputArea {
-      display: flex;
-      padding: 10px;
-      background: #fff;
-    }
-
-    #message {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      outline: none;
-    }
-
-    #sendBtn {
-      margin-left: 10px;
-      padding: 10px 15px;
-      border: none;
-      background: #007bff;
-      color: white;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    @media (max-width: 600px) {
-      .user, .bot {
-        max-width: 85%;
-        font-size: 15px;
-      }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AI 채팅</title>
+<style>
+body { font-family: sans-serif; margin:0; display:flex; flex-direction:column; height:100vh; background:#f5f5f5; }
+#chat { flex:1; overflow-y:auto; padding:10px; }
+#inputArea { display:flex; padding:10px; background:#fff; }
+#message { flex:1; padding:8px; border:1px solid #ccc; border-radius:5px; }
+#sendBtn { margin-left:10px; padding:8px 12px; border:none; background:#007bff; color:white; border-radius:5px; cursor:pointer; }
+.user { text-align:right; color:#007bff; margin:5px 0; }
+.bot { text-align:left; color:#333; margin:5px 0; }
+</style>
 </head>
 <body>
-  <div id="chat"></div>
-  <div id="inputArea">
-    <input id="message" type="text" placeholder="메시지를 입력하세요" />
+<div id="chat"></div>
+<div id="inputArea">
+    <input id="message" type="text" placeholder="메시지를 입력하세요...">
     <button id="sendBtn">전송</button>
-  </div>
+</div>
+<script>
+const chatDiv = document.getElementById("chat");
+const messageInput = document.getElementById("message");
+const sendBtn = document.getElementById("sendBtn");
 
-  <script>
-    const chat = document.getElementById("chat");
-    const input = document.getElementById("message");
-    const sendBtn = document.getElementById("sendBtn");
+function appendMessage(text, sender) {
+    const div = document.createElement("div");
+    div.className = sender;
+    div.textContent = text;
+    chatDiv.appendChild(div);
+    chatDiv.scrollTop = chatDiv.scrollHeight;
+}
 
-    function addMessage(text, sender) {
-      const msg = document.createElement("div");
-      msg.classList.add(sender);
-      msg.textContent = text;
-      chat.appendChild(msg);
-      chat.scrollTop = chat.scrollHeight;
-    }
+async function sendMessage() {
+    const msg = messageInput.value.trim();
+    if (!msg) return;
+    appendMessage(msg, "user");
+    messageInput.value = "";
 
-    async function sendMessage() {
-      const message = input.value.trim();
-      if (!message) return;
-
-      addMessage(message, "user");
-      input.value = "";
-
-      try {
+    try {
         const res = await fetch("/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message }),
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ message: msg }),
         });
-
         const data = await res.json();
-        addMessage(data.reply || "응답 오류", "bot");
-      } catch (err) {
-        addMessage("서버 오류 발생", "bot");
-      }
+        appendMessage(data.reply || "응답 없음", "bot");
+    } catch (e) {
+        appendMessage("서버 오류 발생", "bot");
     }
+}
 
-    sendBtn.addEventListener("click", sendMessage);
-    input.addEventListener("keypress", (e) => {
-      if (e.key === "Enter") sendMessage();
-    });
-  </script>
+sendBtn.addEventListener("click", sendMessage);
+messageInput.addEventListener("keypress", e => { if(e.key==="Enter") sendMessage(); });
+</script>
 </body>
 </html>
