--- a/public/index.html
+++ b/public/index.html
@@ -3,57 +3,110 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AI 채팅</title>
+<title>Aurora ai</title>
 <style>
-body { font-family: sans-serif; margin:0; display:flex; flex-direction:column; height:100vh; background:#f5f5f5; }
-#chat { flex:1; overflow-y:auto; padding:10px; }
-#inputArea { display:flex; padding:10px; background:#fff; }
-#message { flex:1; padding:8px; border:1px solid #ccc; border-radius:5px; }
-#sendBtn { margin-left:10px; padding:8px 12px; border:none; background:#007bff; color:white; border-radius:5px; cursor:pointer; }
-.user { text-align:right; color:#007bff; margin:5px 0; }
-.bot { text-align:left; color:#333; margin:5px 0; }
+  body {
+    font-family: sans-serif;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background: #fafafa;
+  }
+  #chat {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px;
+    background: #fff;
+    border-bottom: 1px solid #ddd;
+  }
+  #inputArea {
+    display: flex;
+    padding: 10px;
+    background: #fff;
+  }
+  #prompt, #message {
+    flex: 1;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 10px;
+  }
+  #sendBtn {
+    padding: 8px 12px;
+    border: none;
+    background: #007bff;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .user {
+    text-align: right;
+    color: #007bff;
+    margin: 5px 0;
+  }
+  .bot {
+    text-align: left;
+    color: #333;
+    margin: 5px 0;
+  }
+  strong {
+    color: #ff7f50;
+  }
 </style>
 </head>
 <body>
+
 <div id="chat"></div>
+
 <div id="inputArea">
-    <input id="message" type="text" placeholder="메시지를 입력하세요...">
-    <button id="sendBtn">전송</button>
+  <input id="prompt" type="text" placeholder="프롬프트 입력 (선택)">
+  <input id="message" type="text" placeholder="메시지 입력">
+  <button id="sendBtn">전송</button>
 </div>
+
 <script>
-const chatDiv = document.getElementById("chat");
+const chat = document.getElementById("chat");
 const messageInput = document.getElementById("message");
+const promptInput = document.getElementById("prompt");
 const sendBtn = document.getElementById("sendBtn");
 
-function appendMessage(text, sender) {
-    const div = document.createElement("div");
-    div.className = sender;
-    div.textContent = text;
-    chatDiv.appendChild(div);
-    chatDiv.scrollTop = chatDiv.scrollHeight;
-}
+const botName = "오로라";
 
 async function sendMessage() {
-    const msg = messageInput.value.trim();
-    if (!msg) return;
-    appendMessage(msg, "user");
-    messageInput.value = "";
+  const message = messageInput.value.trim();
+  const prompt = promptInput.value.trim();
+  if (!message) return;
 
-    try {
-        const res = await fetch("/chat", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ message: msg }),
-        });
-        const data = await res.json();
-        appendMessage(data.reply || "응답 없음", "bot");
-    } catch (e) {
-        appendMessage("서버 오류 발생", "bot");
-    }
+  // 유저 메시지 표시
+  chat.innerHTML += `<div class="user">${message}</div>`;
+  chat.scrollTop = chat.scrollHeight;
+  messageInput.value = "";
+
+  // 서버에 요청
+  try {
+    const res = await fetch("/chat", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ message, prompt })
+    });
+    const data = await res.json();
+    const reply = data.reply || "응답이 없습니다.";
+
+    // AI 응답 표시
+    chat.innerHTML += `<div class="bot"><strong>${botName}:</strong> ${reply}</div>`;
+    chat.scrollTop = chat.scrollHeight;
+  } catch (err) {
+    chat.innerHTML += `<div class="bot"><strong>${botName}:</strong> 서버 오류</div>`;
+    chat.scrollTop = chat.scrollHeight;
+  }
 }
 
 sendBtn.addEventListener("click", sendMessage);
-messageInput.addEventListener("keypress", e => { if(e.key==="Enter") sendMessage(); });
+messageInput.addEventListener("keypress", e => {
+  if (e.key === "Enter") sendMessage();
+});
 </script>
+
 </body>
 </html>
