--- a/public/index.html
+++ b/public/index.html
@@ -3,55 +3,73 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Aurora ai</title>
+<title>오로라 AI 채팅</title>
 <style>
   body {
-    font-family: sans-serif;
     margin: 0;
+    font-family: sans-serif;
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background: #fafafa;
+    background: #f0f4f8;
   }
+
   #chat {
     flex: 1;
     overflow-y: auto;
     padding: 10px;
     background: #fff;
-    border-bottom: 1px solid #ddd;
   }
+
   #inputArea {
     display: flex;
+    flex-direction: column;
     padding: 10px;
     background: #fff;
+    border-top: 1px solid #ccc;
   }
-  #prompt, #message {
-    flex: 1;
-    padding: 8px;
-    border: 1px solid #ccc;
+
+  input {
+    padding: 10px;
+    margin: 5px 0;
     border-radius: 5px;
-    margin-right: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+    box-sizing: border-box;
   }
-  #sendBtn {
-    padding: 8px 12px;
+
+  button {
+    padding: 10px;
     border: none;
     background: #007bff;
     color: white;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 5px;
   }
+
   .user {
     text-align: right;
     color: #007bff;
     margin: 5px 0;
+    word-wrap: break-word;
   }
+
   .bot {
     text-align: left;
     color: #333;
     margin: 5px 0;
+    word-wrap: break-word;
   }
-  strong {
+
+  .bot strong {
     color: #ff7f50;
+  }
+
+  @media (max-width: 600px) {
+    #inputArea {
+      flex-direction: column;
+    }
   }
 </style>
 </head>
@@ -60,8 +78,8 @@
 <div id="chat"></div>
 
 <div id="inputArea">
-  <input id="prompt" type="text" placeholder="프롬프트 입력 (선택)">
-  <input id="message" type="text" placeholder="메시지 입력">
+  <input type="text" id="prompt" placeholder="프롬프트 입력 (선택)">
+  <input type="text" id="message" placeholder="메시지 입력">
   <button id="sendBtn">전송</button>
 </div>
 
@@ -70,7 +88,6 @@ const chat = document.getElementById("chat");
 const messageInput = document.getElementById("message");
 const promptInput = document.getElementById("prompt");
 const sendBtn = document.getElementById("sendBtn");
-
 const botName = "오로라";
 
 async function sendMessage() {
@@ -78,22 +95,20 @@ async function sendMessage() {
   const prompt = promptInput.value.trim();
   if (!message) return;
 
-  // 유저 메시지 표시
   chat.innerHTML += `<div class="user">${message}</div>`;
   chat.scrollTop = chat.scrollHeight;
   messageInput.value = "";
 
-  // 서버에 요청
   try {
     const res = await fetch("/chat", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ message, prompt })
     });
+
     const data = await res.json();
     const reply = data.reply || "응답이 없습니다.";
 
-    // AI 응답 표시
     chat.innerHTML += `<div class="bot"><strong>${botName}:</strong> ${reply}</div>`;
     chat.scrollTop = chat.scrollHeight;
   } catch (err) {
