--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>오로라 AI 채팅</title>
+<title>Aurora ai</title>
 <style>
   body {
     margin: 0;
