Refactor HTML structure and update styles

--- a/public/index.html
+++ b/public/index.html
@@ -3,125 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Aurora ai</title>
-<style>
-  body {
-    margin: 0;
-    font-family: sans-serif;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    background: #f0f4f8;
-  }
-
-  #chat {
-    flex: 1;
-    overflow-y: auto;
-    padding: 10px;
-    background: #fff;
-  }
-
-  #inputArea {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    background: #fff;
-    border-top: 1px solid #ccc;
-  }
-
-  input {
-    padding: 10px;
-    margin: 5px 0;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 100%;
-    box-sizing: border-box;
-  }
-
-  button {
-    padding: 10px;
-    border: none;
-    background: #007bff;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 5px;
-  }
-
-  .user {
-    text-align: right;
-    color: #007bff;
-    margin: 5px 0;
-    word-wrap: break-word;
-  }
-
-  .bot {
-    text-align: left;
-    color: #333;
-    margin: 5px 0;
-    word-wrap: break-word;
-  }
-
-  .bot strong {
-    color: #ff7f50;
-  }
-
-  @media (max-width: 600px) {
-    #inputArea {
-      flex-direction: column;
-    }
-  }
-</style>
+<title>AI 채팅 - 오로라</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div id="chat"></div>
-
-<div id="inputArea">
-  <input type="text" id="prompt" placeholder="프롬프트 입력 (선택)">
-  <input type="text" id="message" placeholder="메시지 입력">
-  <button id="sendBtn">전송</button>
-</div>
-
-<script>
-const chat = document.getElementById("chat");
-const messageInput = document.getElementById("message");
-const promptInput = document.getElementById("prompt");
-const sendBtn = document.getElementById("sendBtn");
-const botName = "오로라";
-
-async function sendMessage() {
-  const message = messageInput.value.trim();
-  const prompt = promptInput.value.trim();
-  if (!message) return;
-
-  chat.innerHTML += `<div class="user">${message}</div>`;
-  chat.scrollTop = chat.scrollHeight;
-  messageInput.value = "";
-
-  try {
-    const res = await fetch("/chat", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ message, prompt })
-    });
-
-    const data = await res.json();
-    const reply = data.reply || "응답이 없습니다.";
-
-    chat.innerHTML += `<div class="bot"><strong>${botName}:</strong> ${reply}</div>`;
-    chat.scrollTop = chat.scrollHeight;
-  } catch (err) {
-    chat.innerHTML += `<div class="bot"><strong>${botName}:</strong> 서버 오류</div>`;
-    chat.scrollTop = chat.scrollHeight;
-  }
-}
-
-sendBtn.addEventListener("click", sendMessage);
-messageInput.addEventListener("keypress", e => {
-  if (e.key === "Enter") sendMessage();
-});
-</script>
-
+  <div id="chatContainer">
+    <div id="chat"></div>
+    <div id="inputArea">
+      <input type="text" id="message" placeholder="메시지를 입력하세요...">
+      <input type="text" id="prompt" placeholder="프롬프트 입력 (선택)">
+      <button id="sendBtn">전송</button>
+    </div>
+  </div>
+<script src="script.js"></script>
 </body>
 </html>
